@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '4.0.2'
+    id 'org.springframework.boot' version '4.0.5'
 
     // Use Spring AOT
     // https://docs.spring.io/spring-boot/gradle-plugin/aot.html
-    id 'org.springframework.boot.aot' version '4.0.2'
+    id 'org.springframework.boot.aot' version '4.0.5'
 
     id 'io.freefair.lombok' version '9.2.0'
     id 'me.qoomon.git-versioning' version '6.4.4'
@@ -17,6 +17,9 @@ plugins {
     // https://github.com/ben-manes/gradle-versions-plugin
     // Provides tasks for discovering dependency updates.
     id 'com.github.ben-manes.versions' version '0.53.0'
+
+    // a Gradle plugin used to generate Java code for Windows APIs. It leverages the Java Foreign Function & Memory (FFM) API
+    //id("net.codecrete.windows-api") version "0.8.3"
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -90,7 +93,7 @@ springBoot {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(25)
+        languageVersion = JavaLanguageVersion.of(26)
     }
 }
 
@@ -112,23 +115,22 @@ configurations.configureEach {
 
 // Override the JUnit version.
 // See https://docs.junit.org/current/user-guide/#running-tests-build-spring-boot
-ext['junit-jupiter.version'] = '6.0.2'
+ext['junit-jupiter.version'] = '6.0.3'
 
 // Override the LogBack version.
 // Fix CVE-2025-11226. See https://www.mend.io/vulnerability-database/CVE-2025-11226
-ext['logback.version'] = '1.5.24'
+// Fix CVE-2026-1225. See https://www.cvedetails.com/cve/CVE-2026-1225/
+ext['logback.version'] = '1.5.32'
 
 // Override the Mockito version.
-ext['mockito.version'] = '5.21.0'
-ext['mockito-junit-jupiter.version'] = '5.21.0'
+ext['mockito.version'] = '5.23.0'
+ext['mockito-junit-jupiter.version'] = '5.23.0'
 
 dependencies {
-    compileOnly 'org.jetbrains:annotations:26.0.2-1'
-
-    implementation 'net.java.dev.jna:jna:5.18.1'
+    compileOnly 'org.jetbrains:annotations:26.1.0'
 
     implementation 'info.picocli:picocli-spring-boot-starter:4.7.7'
-    implementation 'org.fusesource.jansi:jansi:2.4.2'
+    implementation 'org.fusesource.jansi:jansi:2.4.3'
 
     implementation 'commons-io:commons-io:2.21.0'
     implementation 'org.digitalmediaserver:cuelib-core:2.0.0'
@@ -141,7 +143,7 @@ dependencies {
 }
 
 lombok {
-    version = '1.18.42'
+    version = '1.18.44'
 }
 
 
@@ -172,8 +174,74 @@ tasks.register('versionDebug') {
     }
 }
 
+tasks.register('prepareAotLayout', JavaExec) {
+    group = "build"
+    description = 'Prepare the extracted application for AOT Cache creation'
+
+    dependsOn tasks.bootJar
+
+    def sourceJar = bootJar.archiveFile.get().asFile
+    def extractDir = layout.buildDirectory.dir("libs\\extracted").get().asFile
+
+    doFirst {
+        delete extractDir
+    }
+
+    // Setup for SpringBoot command "jarmode=tools":
+    // java -Djarmode=tools -jar d:\java\prj\paracoder\build\libs\ParaCoder.jar extract --destination d:\java\prj\paracoder\build\libs\extracted
+    jvmArgs = ["-Djarmode=tools"]
+    mainClass = "-jar" // A trick that allows to run a JAR directly by passing its path in args
+    args = [
+            sourceJar.absolutePath,
+            "extract",
+            "--destination", extractDir.absolutePath
+    ]
+
+    // Tell Gradle that we are creating a directory (for incremental builds)
+    outputs.dir(extractDir)
+}
+
+tasks.register('generateAotCache', JavaExec) {
+    group = 'build'
+    description = 'Generates AOT Cache for the Java application'
+
+    dependsOn tasks.prepareAotLayout, tasks.processAot
+
+    // Dynamically get the launcher from the project's toolchain settings to ensure
+    // that javac (compilation) and java (cache generation in the generateAotCache task)
+    // use the same JDK binary file.
+    def service = project.extensions.getByType(JavaToolchainService)
+    javaLauncher = service.launcherFor(java.toolchain)
+
+    // Setting up a training run:
+    def extractDir = layout.buildDirectory.dir("libs\\extracted").get().asFile
+    workingDir = extractDir
+    mainClass = "-jar"
+
+    // Training run using thin (extracted) JAR (must end with code 0).
+    // The CLI must do minimal work and shut down to save the cache, so use '--help' parameter
+    def thinJar = file("${extractDir}\\${bootJar.archiveFileName.get()}")
+    args = [
+            thinJar.absolutePath,
+            '--help'
+    ]
+
+    // Java AOT-Cache write options
+    jvmArgs = [
+            "-XX:AOTCacheOutput=${layout.buildDirectory.get()}\\libs\\paracoder.aot",
+            "-XX:+UseCompactObjectHeaders",
+            "-Dspring.aot.enabled=true",
+            "-Dspring.context.exit=onRefresh"
+    ]
+}
+
 tasks.named('build') {
     dependsOn 'processAot'
+}
+
+// Link "generateAotCache" task to the build cycle: the cache will be created immediately after the "build"
+tasks.named('build') {
+    finalizedBy 'generateAotCache'
 }
 
 test {
